# Python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  print_live_position_curses.py  pyproject.toml  setup.py
liboard/: __init__.py  lichess.py  move_recognition.py  physical.py
scripts/: .gitignore  binboard.py  bitboard.py  board_api.py  keyboard.py  live_board.py  scripts.ini.example
tests/: test_bitboard.py
